--- a/src/resource/ui/hgen_xslt.ui
+++ b/src/resource/ui/hgen_xslt.ui
@@ -471,6 +471,7 @@
                     <property name="receives_default">True</property>
                     <property name="image">image10</property>
                     <property name="always_show_image">True</property>
+                    <signal name="clicked" handler="alveran_hgen_hero_edit_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -485,6 +486,7 @@
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="image">image32</property>
+                    <signal name="clicked" handler="alveran_hgen_hero_edit_done_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
