--- a/src/resource/ui/hgen_raw.ui
+++ b/src/resource/ui/hgen_raw.ui
@@ -889,6 +889,7 @@
                                         <property name="can_focus">False</property>
                                         <property name="active">0</property>
                                         <property name="popup_fixed_width">False</property>
+                                        <signal name="changed" handler="alveran_hgen_hero_breed_changed_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
