--- a/src/resource/ui/hgen_raw.ui
+++ b/src/resource/ui/hgen_raw.ui
@@ -902,6 +902,7 @@
                                         <property name="can_focus">False</property>
                                         <property name="active">0</property>
                                         <property name="popup_fixed_width">False</property>
+                                        <signal name="changed" handler="alveran_hgen_hero_culture_changed_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -914,6 +915,7 @@
                                         <property name="can_focus">False</property>
                                         <property name="active">0</property>
                                         <property name="popup_fixed_width">False</property>
+                                        <signal name="changed" handler="alveran_hgen_hero_profession_changed_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
