--- a/src/resource/ui/hgen_raw.ui
+++ b/src/resource/ui/hgen_raw.ui
@@ -771,6 +771,7 @@
                                         <property name="digits">2</property>
                                         <property name="numeric">True</property>
                                         <property name="value">1.5</property>
+                                        <signal name="value-changed" handler="alveran_hgen_hero_height_changed_manual_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -829,6 +830,7 @@
                                       <object class="GtkComboBoxText" id="hgen_hair_color">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
+                                        <property name="active">0</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -864,6 +866,7 @@
                                       <object class="GtkComboBoxText" id="hgen_eye_color">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
+                                        <property name="active">0</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
