--- a/src/resource/ui/hgen_xslt.ui
+++ b/src/resource/ui/hgen_xslt.ui
@@ -777,6 +777,7 @@
                                         <property name="digits">2</property>
                                         <property name="numeric">True</property>
                                         <property name="value">1.5</property>
+                                        <signal name="value-changed" handler="alveran_hgen_hero_height_changed_manual_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -835,6 +836,7 @@
                                       <object class="GtkComboBoxText" id="hgen_hair_color">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
+                                        <property name="active">0</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -870,6 +872,7 @@
                                       <object class="GtkComboBoxText" id="hgen_eye_color">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
+                                        <property name="active">0</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
