--- a/src/resource/ui/hgen_raw.ui
+++ b/src/resource/ui/hgen_raw.ui
@@ -40,11 +40,10 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
-    <property name="lower">1.5</property>
     <property name="upper">10</property>
-    <property name="value">1.5</property>
-    <property name="step_increment">0.01</property>
-    <property name="page_increment">0.10000000000000001</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">1</property>
+    <property name="page_size">1</property>
   </object>
   <object class="GtkAdjustment" id="adjustment20">
     <property name="upper">100</property>
@@ -762,16 +761,21 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="text" translatable="yes">1,50</property>
+                                        <property name="caps_lock_warning">False</property>
                                         <property name="primary_icon_activatable">False</property>
                                         <property name="secondary_icon_activatable">False</property>
                                         <property name="primary_icon_sensitive">False</property>
                                         <property name="secondary_icon_sensitive">False</property>
+                                        <property name="input_purpose">number</property>
                                         <property name="adjustment">adjustment2</property>
-                                        <property name="climb_rate">0.01</property>
+                                        <property name="climb_rate">1</property>
                                         <property name="digits">2</property>
                                         <property name="numeric">True</property>
+                                        <property name="update_policy">if-valid</property>
                                         <property name="value">1.5</property>
+                                        <signal name="output" handler="alveran_hgen_hero_height_on_output_cb" swapped="no"/>
                                         <signal name="value-changed" handler="alveran_hgen_hero_height_changed_manual_cb" swapped="no"/>
+                                        <signal name="wrapped" handler="alveran_hgen_hero_height_changed_manual_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
