--- a/src/resource/ui/hgen_xslt.ui
+++ b/src/resource/ui/hgen_xslt.ui
@@ -388,6 +388,7 @@
   <object class="GtkImage" id="image5">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="margin_right">1</property>
     <property name="icon_name">edit-find-replace-symbolic</property>
   </object>
   <object class="GtkImage" id="image6">
@@ -842,6 +843,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="active">0</property>
+                                        <signal name="changed" handler="alveran_hgen_hero_hair_color_changed_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -849,12 +851,13 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkButton">
+                                      <object class="GtkButton" id="hgen_hair_color_rnd_btn">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="image">image6</property>
                                         <property name="always_show_image">True</property>
+                                        <signal name="clicked" handler="alveran_hgen_hero_hair_color_changed_rnd_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">2</property>
@@ -878,6 +881,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="active">0</property>
+                                        <signal name="changed" handler="alveran_hgen_hero_eye_color_changed_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -885,12 +889,13 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkButton">
+                                      <object class="GtkButton" id="hgen_eye_color_rnd_btn">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="image">image7</property>
                                         <property name="always_show_image">True</property>
+                                        <signal name="clicked" handler="alveran_hgen_hero_eye_color_changed_rnd_cb" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">2</property>
