--- a/src/resource/ui/hgen_xslt.ui
+++ b/src/resource/ui/hgen_xslt.ui
@@ -135,6 +135,9 @@
       <column type="gchararray"/>
     </columns>
   <data><row><col id="0" translatable="yes">Aberglaube</col></row><row><col id="0" translatable="yes">Albino</col></row><row><col id="0" translatable="yes">Angst vor Insekten, Spinnen,..., Feuer, Wasser</col></row><row><col id="0" translatable="yes">Animalische Magie</col></row><row><col id="0" translatable="yes">Arkanophobie</col></row><row><col id="0" translatable="yes">Arroganz</col></row><row><col id="0" translatable="yes">Artefaktgebunden</col></row></data></object>
+  <object class="GtkTextBuffer" id="hgen_look_buffer">
+    <signal name="changed" handler="alveran_hgen_hero_look_changed_cb" swapped="no"/>
+  </object>
   <object class="GtkListStore" id="hgen_pro_liststore">
     <columns>
       <!-- column-name gchararray1 -->
@@ -147,6 +150,12 @@
       <column type="gchararray"/>
     </columns>
   <data><row><col id="0" translatable="yes">Akklimatisierung</col></row><row><col id="0" translatable="yes">Akoluth</col></row><row><col id="0" translatable="yes">Apport</col></row><row><col id="0" translatable="yes">Astrale Meditation</col></row><row><col id="0" translatable="yes">Aufmerksamkeit</col></row><row><col id="0" translatable="yes">Aura verhüllen</col></row><row><col id="0" translatable="yes">Aurapanzer</col></row><row><col id="0" translatable="yes">Ausfall</col></row><row><col id="0" translatable="yes">Ausweichen I</col></row><row><col id="0" translatable="yes">Ausweichen II</col></row><row><col id="0" translatable="yes">Ausweichen III</col></row><row><col id="0" translatable="yes">Bann- und Schutzkreise</col></row><row><col id="0" translatable="yes">Bannschwert</col></row><row><col id="0" translatable="yes">Befreiungsschlag</col></row><row><col id="0" translatable="yes">Beidhändiger Kampf I</col></row><row><col id="0" translatable="yes">Beidhändiger Kampf II</col></row><row><col id="0" translatable="yes">Berittener Schütze</col></row><row><col id="0" translatable="yes">Berufsgeheimnis</col></row><row><col id="0" translatable="yes">Betäubungsschlag</col></row><row><col id="0" translatable="yes">Binden</col></row><row><col id="0" translatable="yes">Blindkampf</col></row><row><col id="0" translatable="yes">Blutmagie</col></row><row><col id="0" translatable="yes">Chimärenmeister</col></row><row><col id="0" translatable="yes">Defensiver Kampfstil</col></row><row><col id="0" translatable="yes">Doppelangriff</col></row><row><col id="0" translatable="yes">Druidenrache</col></row><row><col id="0" translatable="yes">Druidische Dolchrituale</col></row><row><col id="0" translatable="yes">Druidische Herrschaftsrituale</col></row><row><col id="0" translatable="yes">Dämonenbindung I/II</col></row><row><col id="0" translatable="yes">Eisenhagel</col></row><row><col id="0" translatable="yes">Eiserner Wille I/II</col></row><row><col id="0" translatable="yes">Elementarharmonisierte Aura</col></row><row><col id="0" translatable="yes">Elfenlieder</col></row><row><col id="0" translatable="yes">Entwaffnen</col></row><row><col id="0" translatable="yes">Exorzist</col></row><row><col id="0" translatable="yes">Fernzauberei</col></row><row><col id="0" translatable="yes">Festnageln</col></row><row><col id="0" translatable="yes">Finte</col></row><row><col id="0" translatable="yes">Form der Formlosigkeit</col></row><row><col id="0" translatable="yes">Formation</col></row><row><col id="0" translatable="yes">Fälscher</col></row><row><col id="0" translatable="yes">Geber der Gestalt</col></row><row><col id="0" translatable="yes">Gedankenschutz</col></row><row><col id="0" translatable="yes">Gefäß der Sterne</col></row><row><col id="0" translatable="yes">Gegenhalten</col></row><row><col id="0" translatable="yes">Geländekunde</col></row><row><col id="0" translatable="yes">Geodenrituale</col></row><row><col id="0" translatable="yes">Geschützmeister</col></row><row><col id="0" translatable="yes">Gezielter Stich</col></row><row><col id="0" translatable="yes">Golembauer</col></row><row><col id="0" translatable="yes">Große Meditation</col></row><row><col id="0" translatable="yes">Halbschwert</col></row><row><col id="0" translatable="yes">Hammerschlag</col></row><row><col id="0" translatable="yes">Hexenflüche</col></row><row><col id="0" translatable="yes">Hypervehemenz</col></row><row><col id="0" translatable="yes">Höhere Dämonenbindung</col></row><row><col id="0" translatable="yes">Improvisierte Waffe</col></row><row><col id="0" translatable="yes">Invocatio Integra</col></row><row><col id="0" translatable="yes">Kampf im Wasser</col></row><row><col id="0" translatable="yes">Kampfgespür</col></row><row><col id="0" translatable="yes">Kampfreflexe</col></row><row><col id="0" translatable="yes">Karmalqueste</col></row><row><col id="0" translatable="yes">Keulenrituale</col></row><row><col id="0" translatable="yes">Klingensturm</col></row><row><col id="0" translatable="yes">Klingentänzer</col></row><row><col id="0" translatable="yes">Klingenwand</col></row><row><col id="0" translatable="yes">Kontakt zum großen Geist</col></row><row><col id="0" translatable="yes">Konzentrationsstärke</col></row><row><col id="0" translatable="yes">Kraftlinienmagie I</col></row><row><col id="0" translatable="yes">Kraftlinienmagie II</col></row><row><col id="0" translatable="yes">Kraftspeicher</col></row><row><col id="0" translatable="yes">Kriegsreiterer</col></row><row><col id="0" translatable="yes">Kristallomatische Rituale</col></row><row><col id="0" translatable="yes">Kugelzauber</col></row><row><col id="0" translatable="yes">Kulturkunde</col></row><row><col id="0" translatable="yes">Linkhand</col></row><row><col id="0" translatable="yes">Liturgiekenntnis</col></row><row><col id="0" translatable="yes">Liturgien</col></row><row><col id="0" translatable="yes">Lockeres Zaubern</col></row><row><col id="0" translatable="yes">Matrixgeber</col></row><row><col id="0" translatable="yes">Matrixkontrolle</col></row><row><col id="0" translatable="yes">Matrixregeneration I</col></row><row><col id="0" translatable="yes">Matrixregeneration II</col></row><row><col id="0" translatable="yes">Matrixverständnis</col></row><row><col id="0" translatable="yes">Meister der Improvisation</col></row><row><col id="0" translatable="yes">Meisterliche Regeneration</col></row><row><col id="0" translatable="yes">Meisterliche Zauberkontrolle I</col></row><row><col id="0" translatable="yes">Meisterliche Zauberkontrolle II</col></row><row><col id="0" translatable="yes">Meisterliches Entwaffnen</col></row><row><col id="0" translatable="yes">Meisterparade</col></row><row><col id="0" translatable="yes">Meisterschütze</col></row><row><col id="0" translatable="yes">Merkmalkenntnis</col></row><row><col id="0" translatable="yes">Nandusgefälliges Wissen</col></row><row><col id="0" translatable="yes">Nekromant</col></row><row><col id="0" translatable="yes">Niederwerfen</col></row><row><col id="0" translatable="yes">Odûn-Gaben</col></row><row><col id="0" translatable="yes">Ortskenntnis</col></row><row><col id="0" translatable="yes">Ottagaldr</col></row><row><col id="0" translatable="yes">Parierwaffen I</col></row><row><col id="0" translatable="yes">Parierwaffen II</col></row><row><col id="0" translatable="yes">Regeneration I</col></row><row><col id="0" translatable="yes">Regeneration II</col></row><row><col id="0" translatable="yes">Reiterkampf</col></row><row><col id="0" translatable="yes">Repräsentation</col></row><row><col id="0" translatable="yes">Ritualkenntnis</col></row><row><col id="0" translatable="yes">Ritualkenntnis</col></row><row><col id="0" translatable="yes">Rosstäuscher</col></row><row><col id="0" translatable="yes">Runenkunde</col></row><row><col id="0" translatable="yes">Rüstungsgewöhnung I</col></row><row><col id="0" translatable="yes">Rüstungsgewöhnung II</col></row><row><col id="0" translatable="yes">Rüstungsgewöhnung III</col></row><row><col id="0" translatable="yes">Salasandra</col></row><row><col id="0" translatable="yes">Schalenzauber</col></row><row><col id="0" translatable="yes">Schamanische Rituale</col></row><row><col id="0" translatable="yes">Scharfschütze</col></row><row><col id="0" translatable="yes">Schildkampf I</col></row><row><col id="0" translatable="yes">Schildkampf II</col></row><row><col id="0" translatable="yes">Schlangenringzauber</col></row><row><col id="0" translatable="yes">Schnellladen</col></row><row><col id="0" translatable="yes">Schnellziehen</col></row><row><col id="0" translatable="yes">Schuppenbeutel</col></row><row><col id="0" translatable="yes">Semipermanenz I</col></row><row><col id="0" translatable="yes">Semipermanenz II</col></row><row><col id="0" translatable="yes">Signaturkenntnis</col></row><row><col id="0" translatable="yes">Simulatanzaubern</col></row><row><col id="0" translatable="yes">Spießgespann</col></row><row><col id="0" translatable="yes">Spätweihe</col></row><row><col id="0" translatable="yes">Stabzauber</col></row><row><col id="0" translatable="yes">Standfest</col></row><row><col id="0" translatable="yes">Stapeleffekt</col></row><row><col id="0" translatable="yes">Sturmangriff</col></row><row><col id="0" translatable="yes">Tanz der Mada</col></row><row><col id="0" translatable="yes">Tierischer Begleiter</col></row><row><col id="0" translatable="yes">Tod von Links</col></row><row><col id="0" translatable="yes">Traumgänger</col></row><row><col id="0" translatable="yes">Trommelzauber</col></row><row><col id="0" translatable="yes">Turnierreiterei</col></row><row><col id="0" translatable="yes">Umreißen</col></row><row><col id="0" translatable="yes">Unterwasserkampf</col></row><row><col id="0" translatable="yes">Verbotene Pforten</col></row><row><col id="0" translatable="yes">Vertrautenbindung</col></row><row><col id="0" translatable="yes">Vielfache Ladungen</col></row><row><col id="0" translatable="yes">Waffenlose Kampftechnik</col></row><row><col id="0" translatable="yes">Waffenloses Manöver</col></row><row><col id="0" translatable="yes">Waffenmeister(Schild)</col></row><row><col id="0" translatable="yes">Waffenmeister(Waffe)</col></row><row><col id="0" translatable="yes">Waffenspezialisierung</col></row><row><col id="0" translatable="yes">Windmühle</col></row><row><col id="0" translatable="yes">Wuchtschlag</col></row><row><col id="0" translatable="yes">Zauber bereithalten</col></row><row><col id="0" translatable="yes">Zauber bereithalten</col></row><row><col id="0" translatable="yes">Zauber unterbrechen</col></row><row><col id="0" translatable="yes">Zauberroutine</col></row><row><col id="0" translatable="yes">Zauberspezialisierung</col></row><row><col id="0" translatable="yes">Zaubertänzer</col></row><row><col id="0" translatable="yes">Zauberzeichen</col></row><row><col id="0" translatable="yes">Zibilja Rituale</col></row></data></object>
+  <object class="GtkTextBuffer" id="hgen_status_buffer">
+    <signal name="changed" handler="alveran_hgen_hero_status_changed_cb" swapped="no"/>
+  </object>
+  <object class="GtkTextBuffer" id="hgen_story_buffer">
+    <signal name="changed" handler="alveran_hgen_hero_story_changed_cb" swapped="no"/>
+  </object>
   <object class="GtkListStore" id="hgen_talent_body_liststore">
     <columns>
       <!-- column-name Name -->
@@ -248,6 +257,9 @@
       <!-- column-name TaW -->
       <column type="gchararray"/>
     </columns>
+  </object>
+  <object class="GtkTextBuffer" id="hgen_title_buffer">
+    <signal name="changed" handler="alveran_hgen_hero_title_changed_cb" swapped="no"/>
   </object>
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
@@ -1065,6 +1077,8 @@
                                       <object class="GtkTextView">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
+                                        <property name="wrap_mode">word</property>
+                                        <property name="buffer">hgen_status_buffer</property>
                                       </object>
                                       <packing>
                                         <property name="name">page0</property>
@@ -1072,9 +1086,11 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkTextView">
+                                      <object class="GtkTextView" id="hgen_look">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
+                                        <property name="wrap_mode">word</property>
+                                        <property name="buffer">hgen_look_buffer</property>
                                       </object>
                                       <packing>
                                         <property name="name">page1</property>
@@ -1086,6 +1102,8 @@
                                       <object class="GtkTextView">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
+                                        <property name="wrap_mode">word</property>
+                                        <property name="buffer">hgen_story_buffer</property>
                                       </object>
                                       <packing>
                                         <property name="name">page2</property>
@@ -1097,6 +1115,8 @@
                                       <object class="GtkTextView">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
+                                        <property name="wrap_mode">word</property>
+                                        <property name="buffer">hgen_title_buffer</property>
                                       </object>
                                       <packing>
                                         <property name="name">page3</property>
