--- a/src/resource/ui/hgen_xslt.ui
+++ b/src/resource/ui/hgen_xslt.ui
@@ -2581,6 +2581,7 @@
                                                             <property name="valign">start</property>
                                                             <property name="image">image33</property>
                                                             <property name="always_show_image">True</property>
+                                                            <signal name="clicked" handler="alveran_hgen_hero_pro_add_cb" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -2596,6 +2597,7 @@
                                                             <property name="valign">start</property>
                                                             <property name="image">image34</property>
                                                             <property name="always_show_image">True</property>
+                                                            <signal name="clicked" handler="alveran_hgen_hero_pro_remove_cb" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -2638,8 +2640,6 @@
                                                             <child>
                                                             <object class="GtkCellRendererText"/>
                                                             <attributes>
-                                                            <attribute name="background-gdk">1</attribute>
-                                                            <attribute name="foreground-gdk">1</attribute>
                                                             <attribute name="text">0</attribute>
                                                             <attribute name="wrap-width">0</attribute>
                                                             </attributes>
@@ -2774,6 +2774,7 @@
                                                             <property name="valign">start</property>
                                                             <property name="image">image35</property>
                                                             <property name="always_show_image">True</property>
+                                                            <signal name="clicked" handler="alveran_hgen_hero_contra_add_cb" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -2789,6 +2790,7 @@
                                                             <property name="valign">start</property>
                                                             <property name="image">image36</property>
                                                             <property name="always_show_image">True</property>
+                                                            <signal name="clicked" handler="alveran_hgen_hero_contra_remove_cb" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -2831,8 +2833,6 @@
                                                             <child>
                                                             <object class="GtkCellRendererText"/>
                                                             <attributes>
-                                                            <attribute name="background-gdk">1</attribute>
-                                                            <attribute name="foreground-gdk">1</attribute>
                                                             <attribute name="text">0</attribute>
                                                             <attribute name="wrap-width">0</attribute>
                                                             </attributes>
@@ -2967,6 +2967,7 @@
                                                             <property name="valign">start</property>
                                                             <property name="image">image37</property>
                                                             <property name="always_show_image">True</property>
+                                                            <signal name="clicked" handler="alveran_hgen_hero_special_add_cb" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -2982,6 +2983,7 @@
                                                             <property name="valign">start</property>
                                                             <property name="image">image38</property>
                                                             <property name="always_show_image">True</property>
+                                                            <signal name="clicked" handler="alveran_hgen_hero_special_remove_cb" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -3024,8 +3026,6 @@
                                                             <child>
                                                             <object class="GtkCellRendererText"/>
                                                             <attributes>
-                                                            <attribute name="background-gdk">1</attribute>
-                                                            <attribute name="foreground-gdk">1</attribute>
                                                             <attribute name="text">0</attribute>
                                                             <attribute name="wrap-width">0</attribute>
                                                             </attributes>
